[gd_scene load_steps=13 format=3 uid="uid://b8pld8i8dxtq"]

[ext_resource type="Texture2D" uid="uid://bkydlmcyjhc1y" path="res://assets/webpage.png" id="1_x3nyi"]
[ext_resource type="Script" uid="uid://cpbceirdcsw77" path="res://cutscenes/opening.gd" id="1_xo4io"]
[ext_resource type="Texture2D" uid="uid://dha5gvvaaijvf" path="res://assets/warning-sign.png" id="3_pb3xr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3nyi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pb3xr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xo4io"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qdnu3"]
bg_color = Color(0.86117846, 0, 0.23256388, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kc107"]
bg_color = Color(0.9141731, 0.6059671, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l142"]
bg_color = Color(0.75127894, 0.4972747, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccdgc"]
bg_color = Color(0.80474305, 0.53327286, 5.7756904e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkbse"]
bg_color = Color(0.4511481, 0.29169482, 4.813075e-08, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_of42q"]
bg_color = Color(0, 0, 0, 1)

[node name="opening" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xo4io")

[node name="Webpage" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("1_x3nyi")

[node name="clickbutton" type="Button" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 271.0
offset_right = 916.0
offset_bottom = 354.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_x3nyi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pb3xr")
theme_override_styles/hover = SubResource("StyleBoxFlat_xo4io")

[node name="popup1" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 259.0
offset_top = 106.0
offset_right = 563.0
offset_bottom = 443.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qdnu3")

[node name="WarningSign" type="Sprite2D" parent="popup1"]
position = Vector2(149, 64)
scale = Vector2(0.19140626, 0.19140625)
texture = ExtResource("3_pb3xr")

[node name="Label" type="Label" parent="popup1"]
layout_mode = 0
offset_left = 33.0
offset_top = 121.0
offset_right = 271.0
offset_bottom = 271.0
theme_override_font_sizes/font_size = 32
text = "This link may be unsafe."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button1" type="Button" parent="popup1"]
layout_mode = 0
offset_left = 103.0
offset_top = 251.0
offset_right = 207.0
offset_bottom = 300.0
theme_override_styles/normal = SubResource("StyleBoxFlat_kc107")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3l142")
theme_override_styles/hover = SubResource("StyleBoxFlat_ccdgc")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gkbse")
text = "Continue"

[node name="popup2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 338.0
offset_top = 160.0
offset_right = 642.0
offset_bottom = 497.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qdnu3")

[node name="WarningSign" type="Sprite2D" parent="popup2"]
position = Vector2(149, 64)
scale = Vector2(0.19140626, 0.19140625)
texture = ExtResource("3_pb3xr")

[node name="Label" type="Label" parent="popup2"]
layout_mode = 0
offset_left = 32.0
offset_top = 114.0
offset_right = 270.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 30
text = "Are you sure you want to proceed"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button2" type="Button" parent="popup2"]
layout_mode = 0
offset_left = 103.0
offset_top = 251.0
offset_right = 207.0
offset_bottom = 300.0
theme_override_styles/normal = SubResource("StyleBoxFlat_kc107")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3l142")
theme_override_styles/hover = SubResource("StyleBoxFlat_ccdgc")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gkbse")
text = "Continue"

[node name="popup3" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 399.0
offset_top = 223.0
offset_right = 703.0
offset_bottom = 560.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qdnu3")

[node name="WarningSign" type="Sprite2D" parent="popup3"]
position = Vector2(149, 64)
scale = Vector2(0.19140626, 0.19140625)
texture = ExtResource("3_pb3xr")

[node name="Label" type="Label" parent="popup3"]
layout_mode = 0
offset_left = 32.0
offset_top = 114.0
offset_right = 270.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 26
text = "This link could be infected with all sorts of malware!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button3" type="Button" parent="popup3"]
layout_mode = 0
offset_left = 103.0
offset_top = 251.0
offset_right = 207.0
offset_bottom = 300.0
theme_override_styles/normal = SubResource("StyleBoxFlat_kc107")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3l142")
theme_override_styles/hover = SubResource("StyleBoxFlat_ccdgc")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gkbse")
text = "Continue!"

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1174.0
offset_bottom = 676.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_of42q")

[connection signal="pressed" from="clickbutton" to="." method="_on_clickbutton_pressed"]
[connection signal="pressed" from="popup1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="popup2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="popup3/Button3" to="." method="_on_button_3_pressed"]
